--- a/jupyter-notebooks/final-comparison.ipynb
+++ b/jupyter-notebooks/final-comparison.ipynb
@@ -7,7 +7,7 @@
     "\n",
     "# Final Comparison\n",
     "\n",
-    "This notebook contains the original and replicated figures from Annavajhala et al. 2021. We set out to replicate figures 2a and "
+    "This notebook contains the original and replicated figures from Annavajhala et al. 2021. We set out to replicate figures 2a and 4e. They are all displayed below."
    ]
   },
   {
@@ -58,6 +58,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "![](../images/wout_nextstrain_github.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Original Figure 4e\n",
     "\n",
     "![](../images/figure4e.jpg)"
@@ -80,59 +87,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": []
   }
  ],
