--- a/jupyter-notebooks/final-comparison.ipynb
+++ b/jupyter-notebooks/final-comparison.ipynb
@@ -58,7 +58,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![](../images/wout_nextstrain_github.png)"
+    "## without nextstrain or \n",
+    "![](../output/ny/no_nextstrain_no_github/wout_nextstrain_github.png)"
    ]
   },
   {
