fix sh to sbatch

--- a/jupyter-notebooks/final-comparison.ipynb
+++ b/jupyter-notebooks/final-comparison.ipynb
@@ -58,8 +58,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## without nextstrain or \n",
+    "## without nextstrain or github\n",
     "![](../output/ny/no_nextstrain_no_github/wout_nextstrain_github.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The figures above are our attempts to replicate figure 2a. None of them perfectly replicate the original figure. Although we were able to replicate the alignment and tree building, the visualization was difficult to replicate as the documentation behind the color mapping and visualization was unclear."
    ]
   },
   {
@@ -90,7 +97,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Figure 4e was only replicated using nextstrain. It looks very different from the original figure. This is likely due to differences in how the data were subset, filtered and colormapped. Those steps were not well documented in nextstrain and github and this made replication difficult."
+   ]
   }
  ],
  "metadata": {
